Corrected problem in dependency missing message at configure time
We were mistakenly using the `-L' flag for `CPPFLAGS' in the message that
the configure script prints when a mandatory dependency is missing, causing
the suggested commands to not work. It is corrected in this commit along
with some small edits to make it more clear and easy to read.

This bug was found by Mamta Pommier.

--- a/THANKS
+++ b/THANKS
@@ -50,6 +50,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Dmitrii Oparin                       doparin2@gmail.com
     Bertrand Pain                        bertrand.pain@inserm.fr
     William Pence                        william.pence@nasa.gov
+    Mamta Pommier                        mamta.pommier@univ-lyon1.fr
     Bob Proulx                           bob@proulx.com
     Teymoor Saifollahi                   teymur.saif@gmail.com
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
