GSL's download link changed to http in nearby mirror
To download faster and avoid cases that don't recognized an FTP server, the
GSL download link in the dependency page now links to
`http://ftpmirror.gnu.org/gsl/gsl-latest.tar.gz'.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -4959,7 +4959,7 @@ is a large collection of functions that are very useful in scientific
 applications, for example integration, random number generation, and Fast
 Fourier Transform among many others. To install GSL from source, you can
 run the following commands after you have downloaded
-@url{ftp://ftp.gnu.org/gnu/gsl/gsl-latest.tar.gz,
+@url{http://ftpmirror.gnu.org/gsl/gsl-latest.tar.gz,
 @file{gsl-latest.tar.gz}}:
 
 @example
